# pH-control-simulation

./: .gitignore  GRU_MPC.ipynb  GRU_model.ipynb  LIN_MPC.py  LIN_model.py  LIN_model.py~  PID.py  README.md  openLoop.py  ploting.py  ploting2.ipynb  pyproject.toml  requirements.txt
data/: PID_data.csv  PID_data_test.csv  openLoop.csv
models/: LIN_model.pkl  best_model.keras  best_model_params.txt
notebooks/: GRU_MPC.ipynb
results/: ysp.csv  ysp_reg.csv
results/GRU/: gru_reg.csv  gru_servo.csv  modeling - Copia.xlsx  modeling.xlsx  offline.csv
results/LIN/: LIN_reg.csv  LIN_servo.csv  linear_models.xlsx  offline.csv
results/PID/: PID_reg.csv  PID_servo.csv
scripts/: LIN_MPC.py  LIN_model.py  __init__.py  fit_PID.py  foptd.py  generate_PID_dataset.py  openLoop.py  ploting.py  train_DIC.py
src/controllers/: DIC.py  PID.py  __init__.py
src/systems/: __init__.py  system.py
